<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:fitsSystemWindows="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/outputText"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="Enter your calculation"
                android:textDirection="rtl"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:columnCount="4"
                android:rowCount="4"
                android:layout_marginTop="60dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/outputText">

                <Button
                    android:id="@+id/button1"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:onClick="onClick"
                    android:text="1"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:onClick="onClick"
                    android:text="2"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:onClick="onClick"
                    android:text="3"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button4"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:onClick="onClick"
                    android:text="4"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button5"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:onClick="onClick"
                    android:text="5"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button6"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:onClick="onClick"
                    android:text="6"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button7"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:onClick="onClick"
                    android:text="7"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button8"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:onClick="onClick"
                    android:text="8"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button9"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:onClick="onClick"
                    android:text="9"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button0"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:onClick="onClick"
                    android:text="0"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/buttonPlus"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:onClick="onClick"
                    android:text="+"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/buttonMinus"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:onClick="onClick"
                    android:text="-"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/buttonMultiply"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:onClick="onClick"
                    android:text="x"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/buttonDivide"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:onClick="onClick"
                    android:text="/"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/buttonEqual"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:onClick="onClick"
                    android:text="="
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/buttonClear"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:onClick="onClick"
                    android:text="C"
                    android:textSize="24sp" />
            </GridLayout>

            <Switch
                android:id="@+id/jobSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Enable Schedule"
                android:layout_marginBottom="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </android.support.constraint.ConstraintLayout>

        <FrameLayout
            android:id="@+id/content_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <android.support.design.widget.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:menu="@menu/drawer_items"/>

</android.support.v4.widget.DrawerLayout>

