<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/list"
        android:title="List"/>
    <item
        android:id="@+id/about"
        android:title="About"/>
    <item
        android:id="@+id/delete"
        android:title="Delete"/>
    <item
        android:id="@+id/snackbar"
        android:title="snackbar"
        />
</menu>